--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "next": "^15.2.0",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.5"
